# flightscanner

./: .gitignore  pyproject.toml
.github/workflows/: run_flight_scanner.yml
flightscanner/: customer_acquisition.py  email_composer.py  email_service.py  file_writer.py  flight.py  flight_scanner.py  flights_BCN_to_LAX.json  flights_BCN_to_YUL.json  kiwi_client.py  main.py  sheety_client.py  twilio_client.py
